--- a/image_cartoonizer_version1.ipynb
+++ b/image_cartoonizer_version1.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "#Load Image\n",
-    "img = cv2.imread(r'input_img1.jpg')\n",
+    "img = cv2.imread(r'input_img.jpg')\n",
     "show_image(img)"
    ]
   },
@@ -164,7 +164,8 @@
     "plt.title('Cartoonizing Image', fontsize=26)\n",
     "plt.gca().axes.get_yaxis().set_visible(False)\n",
     "plt.gca().axes.get_xaxis().set_visible(False)\n",
-    "plt.show()"
+    "plt.show()",
+    "cv2.imwrite('cartoon_img_version1.png', cartoon)"
    ]
   },
   {
