--- a/image_cartoonizer_version2.ipynb
+++ b/image_cartoonizer_version2.ipynb
@@ -177,7 +177,7 @@
    "outputs": [],
    "source": [
     "#Load Image\n",
-    "image = cv2.imread(r'input_img1.jpg')\n",
+    "image = cv2.imread(r'input_img.jpg')\n",
     "show_image(image)"
    ]
   },
